# AmazingLockpicks

./: .clang-format  CMakeLists.txt  LICENSE  PCH.h  README.md  plugin.cpp  vcpkg-configuration.json  vcpkg.json
include/: BSResource.h  Hooks.h  LockData.h  Manager.h  Offset.h
src/: BSResource.cpp  Hooks.cpp  LockData.cpp  Manager.cpp
